fixed some width issues on mobile

--- a/components/contact/contact.css
+++ b/components/contact/contact.css
@@ -14,7 +14,6 @@
     grid-template-rows: 1fr;
     grid-template-areas: 
     'form . details';
-    padding: 2em;
 }
 
 .contact-form {
@@ -92,6 +91,10 @@
     .hidden {
         display: inherit;
         margin-top: 2rem;
+    }
+
+        body {
+        max-width: 100vw;
     }
 
     .input {
