--- a/components/skills/skills.css
+++ b/components/skills/skills.css
@@ -68,4 +68,8 @@ h3 {
     .skill {
         margin: 2em;
     }
+
+    body {
+        max-width: 100vw;
+    }
 }
